; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_overwrite.c_test_refs_overwrite__object_id.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_overwrite.c_test_refs_overwrite__object_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@ref_master_name = common dso_local global i32 0, align 4
@GIT_REFERENCE_DIRECT = common dso_local global i32 0, align 4
@ref_name = common dso_local global i32 0, align 4
@ref_test_name = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_overwrite__object_id() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @g_repo, align 4
  %4 = load i32, i32* @ref_master_name, align 4
  %5 = call i32 @git_reference_lookup(i32** %1, i32 %3, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_reference_type(i32* %7)
  %9 = load i32, i32* @GIT_REFERENCE_DIRECT, align 4
  %10 = and i32 %8, %9
  %11 = call i32 @cl_assert(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_reference_target(i32* %12)
  %14 = call i32 @git_oid_cpy(i32* %2, i32 %13)
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 @git_reference_free(i32* %15)
  %17 = load i32, i32* @g_repo, align 4
  %18 = load i32, i32* @ref_name, align 4
  %19 = call i32 @git_reference_create(i32** %1, i32 %17, i32 %18, i32* %2, i32 0, i32* null)
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = load i32*, i32** %1, align 8
  %22 = call i32 @git_reference_free(i32* %21)
  %23 = load i32, i32* @g_repo, align 4
  %24 = load i32, i32* @ref_test_name, align 4
  %25 = call i32 @git_reference_lookup(i32** %1, i32 %23, i32 %24)
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @git_reference_type(i32* %27)
  %29 = load i32, i32* @GIT_REFERENCE_DIRECT, align 4
  %30 = and i32 %28, %29
  %31 = call i32 @cl_assert(i32 %30)
  %32 = load i32*, i32** %1, align 8
  %33 = call i32 @git_reference_target(i32* %32)
  %34 = call i32 @git_oid_cpy(i32* %2, i32 %33)
  %35 = load i32*, i32** %1, align 8
  %36 = call i32 @git_reference_free(i32* %35)
  %37 = load i32, i32* @g_repo, align 4
  %38 = load i32, i32* @ref_name, align 4
  %39 = call i32 @git_reference_create(i32** %1, i32 %37, i32 %38, i32* %2, i32 0, i32* null)
  %40 = call i32 @cl_git_fail(i32 %39)
  %41 = load i32, i32* @g_repo, align 4
  %42 = load i32, i32* @ref_name, align 4
  %43 = call i32 @git_reference_create(i32** %1, i32 %41, i32 %42, i32* %2, i32 1, i32* null)
  %44 = call i32 @cl_git_pass(i32 %43)
  %45 = load i32*, i32** %1, align 8
  %46 = call i32 @git_reference_free(i32* %45)
  %47 = load i32, i32* @g_repo, align 4
  %48 = load i32, i32* @ref_name, align 4
  %49 = call i32 @git_reference_lookup(i32** %1, i32 %47, i32 %48)
  %50 = call i32 @cl_git_pass(i32 %49)
  %51 = load i32*, i32** %1, align 8
  %52 = call i32 @git_reference_target(i32* %51)
  %53 = call i32 @cl_assert_equal_oid(i32* %2, i32 %52)
  %54 = load i32*, i32** %1, align 8
  %55 = call i32 @git_reference_free(i32* %54)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_reference_type(i32*) #1

declare dso_local i32 @git_oid_cpy(i32*, i32) #1

declare dso_local i32 @git_reference_target(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_reference_create(i32**, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @cl_assert_equal_oid(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
